# happy-llm-cli

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile  LICENSE  README.md  orchestration-command-output.txt  plan.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md
docs/documentation/: 001-overview.md  002-guidelines.md  003-orchestration.md  004-reference.md  005-function-calling.md  index.md
docs/planning/: env-config.md  models.md  phase0.yaml  phase1.yaml  phase2.yaml  phase3.yaml  phase4.yaml  phase5.yaml  plan.md  task-orchestration.md
examples/: README.md
examples/function-calling/: get_weather.py  search_knowledge_base.py  send_email.py
happy_llm_cli/providers/: __init__.py
happy_llm_cli/utils/: __init__.py
orchestration/: __init__.py  generate_app_runbook.py  run.py  runbook.yaml
orchestration/tasks/: app_1.1.1.yaml  app_1.1.2.yaml  app_1.1.3.yaml  app_1.1.4.yaml  app_1.2.1.yaml  app_1.2.2.yaml  app_1.3.1.yaml  app_1.3.2.yaml  app_1.3.3.yaml  app_1.3.4.yaml  app_1.3.5.yaml  app_1.3.6.yaml  app_1.4.1.yaml  app_1.4.2.yaml  app_1.5.1.yaml  app_1.5.2.yaml  app_1.6.1.yaml  app_1.6.2.yaml  app_1.6.3.yaml  app_1.6.4.yaml  app_1.6.5.yaml  app_2.1.1.yaml  app_2.1.2.yaml  app_2.1.3.yaml  app_2.2.1.yaml  app_2.2.2.yaml  app_2.2.3.yaml  app_2.2.4.yaml  app_2.3.1.yaml  app_2.3.2.yaml  app_2.3.3.yaml  app_2.3.4.yaml  app_2.4.1.yaml  app_2.4.2.yaml  app_2.4.3.yaml  app_2.4.4.yaml  app_3.1.1.yaml  app_3.1.2.yaml  app_3.1.3.yaml  app_3.1.4.yaml  (+83 more)
tests/: README.md
